[tool.poetry]
name = "dbp_python_course"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.black]
line-length = 100

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^2.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"
mypy = "^1.13.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"